--- a/html_build/pages/profile/templates/header.html
+++ b/html_build/pages/profile/templates/header.html
@@ -11,19 +11,13 @@
 			<ul class="span6 textcenter image-outer-h"></ul>
 			<div class="span6">
 				<div class="teams">
-					<h4>Teams</h4>
+					<h4 class="hide">Teams</h4>
 					<div id="sports-info"></div>
 					<a href="javascript: void(0);" class="see-more-teams-h hide">Show All</a>
 				</div>
-				<div class="height">
-					{{#height_ft}}{{height_ft}}{{/height_ft}}
-				</div>
-				<div class="weight">
-					{{#weight_lb}}{{weight_lb}} lbs{{/weight_lb}}
-				</div>
 			</div>
 		</div>
-
+		
 		<div class="stats-panel span5" style="width:35%;">
 			<div class="stats-header">
 				<span id="profileName"></span>Stats{{#loggedInUser}}<span class="edit-message">Click to edit</span>{{/loggedInUser}}
@@ -31,6 +25,19 @@
 			<div id="fitnessbasic-wrap"></div>
 		</div>
 	</div>
+			<div class="profile-info">
+			{{#height_ft}}
+				<div class="height">
+					Height: {{height_ft}}
+				</div>
+				{{/height_ft}}
+				{{#weight_lb}}
+				<div class="weight">
+					Weight: {{weight_lb}} lbs
+				</div>
+			{{/weight_lb}}
+		</div>
+
 </div>
 </div>
 {{/payload}}
