--- a/html_build/usercontrols/tag/tag.css
+++ b/html_build/usercontrols/tag/tag.css
@@ -1,7 +1,7 @@
 
 label{   display: inline;}
 .pointer {cursor: pointer;}
-.ui-autocomplete{max-height: 250px;overflow-y:auto;overflow-x: :hidden;}
+.ui-autocomplete{max-height: 250px;overflow-y:auto;overflow-x:hidden;}
 select.displayNone, textarea.displayNone, input[type="text"].displayNone{display:none}
 .container_batch_tag .field-message{
 	background-color: rgba(0, 0, 0, 0);
@@ -19,3 +19,6 @@ select.displayNone, textarea.displayNone, input[type="text"].displayNone{display
 .container_batch_tag input[type="text"]{margin:4px 0;border: 1px solid #777777;}
 .container_batch_tag .section_inner{margin:5px 0;}
 .container_batch_tag .section_outer{margin:5px 0;}
+.container_batch_tag{
+    display: none;
+}
