--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -684,7 +684,7 @@ a.comment-delete {
 	padding-bottom: 60px;
 }
 .profile-pic-outer {
-	margin: 40px 15px;
+	margin: 40px 15px 0px 15px;
 }
 .profile-comment-list-box #comment-list {
 	margin-left: 50px;
@@ -692,6 +692,7 @@ a.comment-delete {
 .profile-comment-list-box #comment-list li {
 	padding-bottom: 10px;
 }
+.profile-info { padding: 0 25px; }
 .user-photo {
 	float: left;
 }
@@ -1394,7 +1395,16 @@ form fieldset > div {
 	width: 100%;
 }
 div[data-error] {
-	color: #FF0000;
+    display: block;
+	color: #a30000;
+    position: absolute;
+    border: 4px solid #787878;
+    padding: 5px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+}
+div[data-error]:empty{
+    display: none !important;
 }
 .focus-error-animation {
 	border: 5px solid #FF0000 !important;
@@ -1434,6 +1444,12 @@ div[data-error] {
 a.add-to-event {
 	display: none;
 }
+.container_batch_tag .section-link_h{
+    width: 100%;
+}
+.container_batch_tag a.icons{
+    margin-right:10px;
+}
 .icons {
 	background: url(images/icons/sprites.png) no-repeat;
 	float: left;
@@ -1443,6 +1459,9 @@ a.add-to-event {
 	-ms-box-shadow: 1px 1px 20px 0px rgba(0,0,0,0.45);
 	-o-box-shadow: 1px 1px 21px 0px rgba(0,0,0,0.45);
 	box-shadow: 1px 1px 21px 0px rgba(0,0,0,0.45);
+    text-align: center;
+    font-size: .7em;
+    color: #444444;
 }
 .icon_selected {
 	-webkit-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
@@ -1632,7 +1651,7 @@ div.edit {
 	background-size: contain;
 }
 #add-media span {
-	width: 100px;
+	width: 110px;
 	display: table-cell;
 	vertical-align: middle;
 	text-align: center;
@@ -1644,13 +1663,9 @@ div.edit {
 	visibility: hidden !important;
 }
 #add-media span, .add-tile-outer span {
-	
-	
-	
-	max-height: 100px;
-	height: 100px;
-	
-	max-width: 100px;
+	max-height: 110px;
+	height: 110px;
+	max-width: 110px;
 	overflow: hidden;
 	}
 #add-media a#addVideo {
@@ -1661,17 +1676,21 @@ li.add-tile-outer {
 	padding: 0 !important;
 	margin: 10px;
 	float: left;
+	max-heigh: 220px;
 }
-.add-tile-outer > div {
+.add-icons-outer {
+	width: 100%;
+	height: 100%;
+}
+.add-tile-outer .add-icons-outer > div {
 	height: 50%;
 	width: 100%;
 	display: table-row;
+	float: left;
+	max-height: 110px;
 }
 .add-tile-outer .hide {
 	visibility: hidden !important;
-	
-	
-	
 }
 .add-tile-outer a {
 	width: 110px;
@@ -1684,6 +1703,7 @@ li.add-tile-outer {
 	display: table-cell;
 	vertical-align: middle;
 	height: 110px;
+	max-height: 110px;
 }
 #fbInvite ul li.image {
 	float: left;
