--- a/html_build/packages/media/templates/add-media.html
+++ b/html_build/packages/media/templates/add-media.html
@@ -2,7 +2,7 @@
 	<div>
 	<a href="{{link}}" title="{{label}}" id="{{id}}">
 	</a>
-	<span class="hide">{{label}}</span>		
+	<span class="hide character-limit-h">{{label}}</span>		
 	</div>
 
 {{/links}}
