--- a/html_build/pages/imageup/imageup.css
+++ b/html_build/pages/imageup/imageup.css
@@ -12,12 +12,12 @@
     font-size: 16px;
     font-weight: normal;
     font-family: "HelveticaNeue",Helvetica,Arial,sans-serif;
-    width: 100%;
+    width: 92%;
 }
 .previewimg {
     display: inline;
     float: left;
-    margin: 10px 4px 80px;
+    margin: 10px 4px 25px;
     height: 250px;
 }
 #preview {
@@ -112,45 +112,63 @@
 color: red;
 }
 #imgpreview .selected{
-	border: 6px solid #954121;
-	 margin-bottom: 71px;
+	border: 6px solid #9cca3c;
+	 margin-bottom: 25px;
 }
 .previewimg{
-	  border: 1px solid #CCCCCC;
+    border: 6px solid #CCCCCC;
 	position: relative;
 }
+.previewimg .click-to-tag{
+    width: 90%;
+    position: absolute;
+    top: 20%;
+    vertical-align: middle;
+    color: white;
+    font-size: 4em;
+    line-height: 1em;
+    font-weight: bolder;
+    opacity: .4;
+    right: 5%;
+    display: none;
+}
 .previewimg .lnkFooter{
-	background: none repeat scroll 0 0 #1B9FAE;
+	background: none repeat scroll 0 0 #9cca3c;
     font-weight: lighter;
     float: left;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: lighter;
     text-align: left;
     width: 100%;
   
     display:none;
     bottom: 0;
      position: absolute;
+    opacity: .85;
 }
 .previewimg .lnkFooter button{
 	background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
     font-weight: lighter;
-    border-radius: 0 0 0 0;
-    border-right: none;
-    border-style: none;
+    border:0;
     color: #FFFFFF;
     float: left;
-    font-size:.9em;
+    font-size:1.1em;
     text-shadow: none;
+    -webkit-box-shadow:none;
     width: 100px;
+    padding:8px;
+}
+.previewimg .lnkFooter button.rotate img{
+    width: 32px;
+    height: 32px;
 }
 .previewimg .lnkFooter button.close{
-	border: none;
+    border: none;
     font-weight: lighter;
-    font-size: .9em;
-    opacity: 1;
-    width: 100px;
-    padding: 6px 0;
+    font-size: 2.6em;
     float: right;
+    padding: 9px 16px 17px 16px;
+    opacity: 1;
 }
 .previewimg img {
 	border: none;
