--- a/html_build/pages/imageup/templates/preview_template.html
+++ b/html_build/pages/imageup/templates/preview_template.html
@@ -2,16 +2,18 @@
 	<div class="previewimg" id="{{preview_id}}group"align="center">
 		
 		<div class="previewimgsrc" id="{{preview_id}}pre" align="center">
+			<div class="click-to-tag">Click to Tag</div>
 			<img src="{{filesrc}}" class="img-polaroid" width="{{width}}" height="{{height}}" title="{{title}}" draggable="false">
 			<!-- <button type="button" class="close closepreview" value ="{{preview_id}}"data-dismiss="{{preview_id}}">&times;</button> -->
 			<input type="hidden" id="{{preview_id}}rotang" value="0">
+
 		
 		</div>
 		
 		<div class="clear"></div>
 		<div id="{{preview_id}}rot" class="previewrotate lnkFooter">
-			<button id="{{preview_id}}pre img" value="{{preview_id}}" class="btn rotate">rotate 90&deg;</button>
-			<button type="button" class="btn close closepreview" value ="{{preview_id}}"data-dismiss="{{preview_id}}">delete</button>
+			<button title="Rotate 90°" id="{{preview_id}}pre img" value="{{preview_id}}" class="btn rotate"><img src="http://cdn.athletez.com/resources/img/rotate.png" /></button>
+			<button title="Delete" type="button" class="btn close closepreview" value ="{{preview_id}}"data-dismiss="{{preview_id}}">&times;</button>
 		</div>
 		<div class="clear"></div>
 		<div id="{{preview_id}}" class="previewprogress"></div>
