--- a/html_build/pages/signup/templates/registration.html
+++ b/html_build/pages/signup/templates/registration.html
@@ -26,7 +26,8 @@
 					<input type="text" name="email" placeholder="Email" />
 					<div class="error">
 					</div>
-				</div>
+				</div><% if(fb_invite){ %><input type="hidden" name="fb_invite_id" value="<%= fb_invite %>" /><% } %>
+
 				<div class = "signupsubmit">
 					<input type="submit" name="create" value="Sign Up" class="regsubmit" />
 				</div>
