--- a/html_build/usercontrols/tag/templates/layout.html
+++ b/html_build/usercontrols/tag/templates/layout.html
@@ -19,7 +19,7 @@
 		<label class="lbl-tag-sport-name_h bigger"></label>
 		<!-- <div class="clear"></div> -->
 		<span>
-			<a href="javascript:void(0)" class="btn-tag-edit-sport_h">Edit</a></span>
+			<a href="javascript:void(0)" class="btn-tag-edit-sport_h">Change Sport</a></span>
 	</div>
 	
 	<div class="section-team_h displayNone section_inner">
@@ -37,7 +37,7 @@
 	<div class="section-tag-team_h displayNone section_outer">
 		Tag a Team : 
 		<br/>
-		<input type="text" class="txt-tag-team-state_h" placeholder="Enter State" />
+		<input type="text" class="txt-tag-team-state_h displayNone" placeholder="Enter State" />
 		<div class="clear"></div>
 		<input type="text" class="txt-tag-team-city_h displayNone" placeholder="Enter City" />
 		<div class="clear"></div>
@@ -103,12 +103,15 @@
 	</div>
 	<div class="clear"></div>
 	<div class="section-link_h displayNone section_outer">
-		Tag:
-		<a href="javascript:void(0)" class="link-tag-team_h">Team&nbsp;</a>
-		<a href="javascript:void(0)" class="link-tag-player_h displayNone">Player&nbsp;</a>
-		<a href="javascript:void(0)" class="link-tag-Game_h displayNone">Game&nbsp;</a>
-		<a href="javascript:void(0)" class="link-tag-event_h displayNone">Event&nbsp;</a>
-		<div class="clear"></div>
+
+		<div class="fixed-icons">
+			<ul>
+				<li><a id="user" class="link-tag-player_h icons athlete restype" data-selected-class="athlete_selected icon_selected" data-number="2" title="Tag a Player" href="javascript:void(0);"></a></li>
+				<li><a id="org" class="link-tag-team_h icons team restype" data-selected-class="team_selected icon_selected" data-number="4" title="Tag a Team" href="javascript:void(0);"></a></li>
+				<li><a id="game" class="link-tag-Game_h icons events-games restype" data-selected-class="events-games_selected icon_selected" data-number="3" title="Tag a Game" href="javascript:void(0);"></a></li>
+				<li><a id="event" class="link-tag-event_h icons events-games restype" data-selected-class="events-games_selected icon_selected" data-number="3" title="Tag an Event" href="javascript:void(0);"></a></li>
+			</ul>
+		</div>
 		<span class="displayNone field-message"></span>
 	</div>
 	<div class="clear"></div>
