single sport / indiv sport club stuff

--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -68,7 +68,7 @@
 </div>
 
 <div id="modalPopupGameEdit" class="modal photo-frame-model hide fade">
-	<div class="modal-header">
+	<div class="modal-header"><span>Update Event Info</span>
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 			&times;
 		</button>
