--- a/html/usercontrols/add-club/add-club.css
+++ b/html/usercontrols/add-club/add-club.css
@@ -16,8 +16,7 @@ float: right;
 }
 
 .add-club-school-outer {
-	max-height: 500px;
-	height: 500px;
+	height: 95%;
 	overflow-y: auto;
 	overflow-x: hidden; 
 }
