--- a/html/usercontrols/add-club/templates/layout.html
+++ b/html/usercontrols/add-club/templates/layout.html
@@ -11,6 +11,12 @@
 		<label>Which best describes the levels your club has?</label>
 		<div class="comp-levels-h"></div>
 	</div>
+
+	<div class="sports-select-h comptetion-level-type hide">
+		<label>If this is a single-sport, choose our sport</label>
+		<div class="sports-h"></div>
+	</div>
+
 	
 	<div class="address">
 		<label>Address</label>
