--- a/html_build/pages/profile/templates/sport-team.html
+++ b/html_build/pages/profile/templates/sport-team.html
@@ -4,11 +4,11 @@
 	<div>
 		<span class="icon-circle-arrow-right team-list-icon"></span><div class="teamlist-header">{{name}}</div>
 		{{#sports}}
-			{{#.}}
+		 <span class="team-item list-container" style="display: none;">
 				{{#teams}}
-				    <span class="team-item" style="display:none;"><a href="/#!team/{{id}}">{{complevel}} {{season}} {{year}}</a></span>
+				   <a  title="{{complevel}} {{season}} {{year}}" href="/#!team/{{id}}" style="display: block;">{{complevel}} {{season}} {{year}}</a>
 			    {{/teams}}
-			{{/.}}
+		</span>
 	    {{/sports}}
     </div>
     {{/name}}
