--- a/html_build/pages/profilesetting/templates/sportslevel.html
+++ b/html_build/pages/profilesetting/templates/sportslevel.html
@@ -1,5 +1,5 @@
 <div class="section-sportslevel">
-	<div>
+	<div class="select-sports-outer-h">
 		<span class="span2">Choose Sport</span>
 		<!-- class="ddl-school-sports"-->
 		<select class="ddl-sports" orgsid="{{orgsId}}" tabindex="0">
