--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -4,11 +4,11 @@
 
 <div class="fixed-icons">
 	<ul>
-		<li><a id="image" class="icons restype photos" data-selected-class="photos_selected icon_selected" data-number="1" title="media" href="javascript:void(0);"></a></li>
-		<li><a id="video" class="icons videos restype" data-selected-class="videos_selected icon_selected" title="videos" data-number="0" href="javascript:void(0);"></a></li>
-		<li><a  id="user" class="icons athlete restype" data-selected-class="athlete_selected icon_selected" data-number="2" title="athlete" href="javascript:void(0);"></a></li>
-		<li><a id="org" class="icons team restype" data-selected-class="team_selected icon_selected" data-number="4" title="team" href="javascript:void(0);"></a></li>
-		<li><a id="game" class="icons events-games restype" data-selected-class="events-games_selected icon_selected" data-number="3" title="events" href="javascript:void(0);"></a></li>
+		<li><a id="image" class="icons restype photos" data-tip-style="qtip-tipsy" data-selected-class="photos_selected icon_selected" data-number="1" title="Find Images" href="javascript:void(0);"></a></li>
+		<li><a id="video" class="icons videos restype" data-tip-style="qtip-tipsy" data-selected-class="videos_selected icon_selected" title="Show Videos" data-number="0" href="javascript:void(0);"></a></li>
+		<li><a  id="user" class="icons athlete restype" data-tip-style="qtip-tipsy" data-selected-class="athlete_selected icon_selected" data-number="2" title="Search for an Athlete" href="javascript:void(0);"></a></li>
+		<li><a id="org" class="icons team restype" data-tip-style="qtip-tipsy" data-selected-class="team_selected icon_selected" data-number="4" title="Find a Team" href="javascript:void(0);"></a></li>
+		<li><a id="game" class="icons events-games restype" data-tip-style="qtip-tipsy" data-selected-class="events-games_selected icon_selected" data-number="3" title="Search for Games, Events, or Matches" href="javascript:void(0);"></a></li>
 	</ul>
 </div>
 
