--- a/html/css/bootstrap.css
+++ b/html/css/bootstrap.css
@@ -5240,6 +5240,7 @@ input[type="submit"].btn.btn-mini {
   max-height: 90%;
   min-height: 90%;
   overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .modal-form {
