--- a/html/usercontrols/photo-player/templates/comments.html
+++ b/html/usercontrols/photo-player/templates/comments.html
@@ -8,7 +8,7 @@
     <div class="content">
     	<!--span class="comment-date">{{poster}} {{comment_date}}</span-->
     	<span class="user-comment">{{user.first_name}} </span>
-    	<p class="comment-text">{{comment}}</p>
+    	<p class="comment-text">{{{comment}}}</p>
     </div>
 </div>
 {{/payload}}
