Added edit team to the team header page and added city to the org search on profile settings page.

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1649,7 +1649,7 @@ div.game-info .game-score .team-score.win {
 
 
 form fieldset ul li:first-child {
-	margin-left: -20px;
+/*	margin-left: -20px; */
 }
 
 form fieldset ul li {
