--- a/html/pages/profilesetting/profilesettings.css
+++ b/html/pages/profilesetting/profilesettings.css
@@ -297,3 +297,15 @@ a.remove{ background-image: url(http://athletez.s3.amazonaws.com/resources/img/x
 .reference-labels{
     display:inline-block;
 }
+
+/* UI MENU */
+
+.ui-menu-item a{
+    margin:-1px;
+
+}
+
+.ui-menu-item a span.sub-label{
+    font-size:.8em;
+    color: #575757;
+}
