--- a/html/usercontrols/photo-player/templates/tags.html
+++ b/html/usercontrols/photo-player/templates/tags.html
@@ -1,8 +1,8 @@
 <div class="prof-name-area"></div>
 <div class="tags-outer-h">
 	<div class="photo-detail photo-detail-h ">
-		<span>Photo Details</span>
-		<a href="javascript: void(0);" class="photo-player-detail-icons photo-player-detail-arrow photo-player-detail-arrow-h down-arrow-photoplayer"></a>
+		<span>Tags</span>
+		<a href="javascript: void(0);" class="photo-player-detail-icons photo-player-detail-arrow photo-player-detail-arrow-h up-arrow-photoplayer"></a>
 	</div>
 	<ul id="tags-list"></ul>
 </div>
