--- a/html/usercontrols/photo-player/templates/player.html
+++ b/html/usercontrols/photo-player/templates/player.html
@@ -3,7 +3,7 @@
 		<ul class="image-actions">
 			<li><a href="javascript: void(0);" class="photo-player-tag-photo-h" title="tag photo">Tag Photo</a></li>
 			<li><a href="javascript: void(0);" class="photo-player-tag-myself-h" title="tag my self">Tag Myself</a></li>
-			<li><a href="javascript: void(0);" class="photo-player-vote-h" title="vote">Vote</a></li>
+			<li><a href="javascript: void(0);" class="photo-player-vote-h" title="vote">Vote <span class="votes-num-h"></span></a></li>
 			<li class="icon-parent"><a href="javascript: void(0);" class="player-share share-on-h" data-share="facebook" title="share on facebook"></a></li>
 			<li class="icon-parent"><a href="javascript: void(0);" class="player-share share-on-h" data-share="twitter" title="share on twitter"></a></li>
 			<li class="icon-parent"><a href="javascript: void(0);" class="player-share share-on-h" data-share="gplus" title="share on google plus"></a></li>
