--- a/html/usercontrols/photo-player/templates/player.html
+++ b/html/usercontrols/photo-player/templates/player.html
@@ -29,7 +29,7 @@
 	</div>
 	
 	<div class="bottom-line-container">
-		<span class="image-message-h"></span>
+		<span class="image-message-h image-message"></span>
 		<a href="javascript: void(0)" class="photo-player-arrow photo-player-icons left-arrow-photoplayer back-arrow-h"></a>
 		<a href="javascript: void(0);" class="show-thumbs photo-player-icons toggle-thumbs-h"></a>
 		<a href="javascript: void(0)" class="photo-player-icons photo-player-arrow right-arrow-photoplayer next-arrow-h"></a>
